# krabbydo

./: .gitignore  Cargo.toml  LICENSE  README.md  exported_events.json
middleware/: Cargo.toml
middleware/src/: lib.rs
notification/: Cargo.toml
notification/src/: lib.rs  main.rs
resources/: usage_example.md
src/: app.rs  lib.rs  main.rs  middlewarelib.rs
ui/: Cargo.toml
ui/src/: app.rs  lib.rs  main.rs  style.rs
