[package]
name = "krabby_do"
version = "0.1.0"
authors = ["Rohan Singh <rohsingh@pdx.edu>", "Kajal Patil <kajal@pdx.edu>", "Prachi Kashyap <pk23@pdx.edu>"]
edition = "2021"

[dependencies]
chrono = "0.4.24"
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "0.21.0", features = [
    "datepicker",
] }
serde = { version = "1", features = ["derive"] }
# tracing-subscriber = "0.3"

