[package]
name = "ui"
version = "0.1.0"
authors = ["Rohan Singh <rohsingh@pdx.edu>"]
edition = "2021"

[dependencies]
bson = "2.6.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.24"
egui = "0.21.0"
serde_json = "1.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "0.21.0", features = [
    "datepicker",
] }
middleware = {path = "../middleware"} 
notification = {path = "../notification"}

[features]
print_debug_log = []